--- a/pipeline/pom.xml
+++ b/pipeline/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pipeline</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>qub</groupId>
+            <artifactId>shared</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
