--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>shared</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>qub</groupId>
+            <artifactId>pipeline</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
