--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -23,6 +23,13 @@
             <artifactId>pipeline</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+
     </dependencies>
 
 
